--- a/style.css
+++ b/style.css
@@ -2,14 +2,71 @@
 *{
     background-color: black;
     color: white;
+    font-size: large;
 }
 h3, h1{
-    color: green;
+    color: rgb(4, 250, 13);
+    font-size: 80px;
+    font-family: sans-serif;
+    text-align: center;
+    text-shadow: .1rem .2rem gainsboro;
 }
 a{
-    color: orangered;
+    color: rgba(116, 9, 237, 0.925);
+    font-size: 40px;
+    text-align: center;
+    text-decoration: none;
+    
+}
+a li{
+    color: rgba(116, 9, 237, 0.925);
+    font-size: 40px;
+    text-decoration: none;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 #social{
-    background-color: rgb(255, 0, 212);
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+.about{
+    font-size: 40px;
+    color:aquamarine;
+}
+li{
+    font-size: 40px;
+    text-indent: 10%;
+    
+}
+.address{
+    font-size: 50px;
+    color: gold;
+    text-align: center;
+    text-decoration: double;
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.info,a{
+    text-align: center;
+}
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+.info {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.container{
+    display:inline-block;
+    margin-left: auto;
+    margin-right: auto;
     
 }
