--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
 *{
     background-color: black;
     color: white;
-    font-size: large;
+    /* font-size:20px; */
 }
 h3, h1{
     color: rgb(4, 250, 13);
-    font-size: 80px;
+    font-size: 60px;
     font-family: sans-serif;
     text-align: center;
-    text-shadow: .1rem .2rem gainsboro;
+    text-shadow: .1rem .1rem gainsboro;
 }
 a{
     color: rgba(116, 9, 237, 0.925);
@@ -35,6 +35,7 @@ a li{
 .about{
     font-size: 40px;
     color:aquamarine;
+    font-weight: normal;
 }
 li{
     font-size: 40px;
@@ -54,6 +55,10 @@ img {
 }
 .info,a{
     text-align: center;
+    margin-right: 20px;
+    margin-left: 20px;
+    font-size: 20px;
+    font-weight: bold;
 }
 .center {
     margin-left: auto;
@@ -66,11 +71,23 @@ img {
 }
 .container{
     display:inline-block;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     
 }
-.details,p{
+div div nav p{
     text-align: center;
     font-size: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.contact{
+    text-align: center;
+    font-size: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+a:hover{
+    color: orangered;
+    
 }
